--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  background-color: #02012b;
+  background-color: #02012c;
   color: white;
   font-family: "DMSans", sans-serif;
 }
@@ -25,18 +25,44 @@ body {
 }
 
 .head-text {
-  font-family: "BricolageGrotesque-Bold", sans-serif;
+  font-family: "BricolageGrotesque", sans-serif;
   font-size: 40px;
   font-weight: bold;
   text-align: center;
 }
 
-.search-box {
+.search-bar {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
-  border: 1px solid white;
+  margin-top: 30px;
+  color: #3c3b5e;
+}
+
+.search-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 20px;
+}
+
+.search-input {
+  padding: 10px 14px;
+  font-size: 16px;
+  border-radius: 8px;
+  border-color: #3c3b5e;
+  outline: none;
+  width: 300px;
+}
+
+.search-btn {
+  padding: 9px 15px;
+  font-size: 16px;
+  border-radius: 8px;
+  background-color: #4658d9;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-left: 10px;
 }
 
 .weather-bg {
